# panorama

./: .gitignore  CMakeLists.txt  README.md  corner_detection.cpp  corner_pairing.cpp  fast.cpp  matching.cpp  panorama.cpp
headers/: corner_detection.hpp  distance.hpp  fast_detector.hpp  local_maxima.hpp  panorama.hpp  skeletonization.hpp  transformation.hpp
report/: panorama.tex
src/: corner_detection.cpp  distance.cpp  fast_detector.cpp  local_maxima.cpp  main.cpp  skeletonization.cpp  transformation.cpp
